# fintech-analytics-platform

./: .gitignore  README.md  SETUP.md  dashboard.html  docker-compose.yml  requirements.txt
.github/workflows/: dbt_ci.yml  publish.yml
airflow/dags/: fintech_pipeline.py  streaming_monitor.py
data/: fintech_stream.duckdb
data/raw/: customers.csv  disputes.csv  fx_rates.csv  merchants.csv
fintech_analytics_pkg/: README.md  pyproject.toml
fintech_analytics_pkg/.github/workflows/: ci.yml
fintech_analytics_pkg/fintech_analytics/: __init__.py
fintech_analytics_pkg/fintech_analytics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fintech_analytics_pkg/fintech_analytics/analytics/: cohorts.py  explain.py  forecast.py  merchants.py  segmentation.py
fintech_analytics_pkg/fintech_analytics/cli/: main.py
fintech_analytics_pkg/fintech_analytics/compliance/: checks.py
fintech_analytics_pkg/fintech_analytics/ml/: drift.py  fraud.py
fintech_analytics_pkg/fintech_analytics/pipeline/: core.py  dashboard.py  dbt_engine.py
fintech_analytics_pkg/fintech_analytics/pipeline/dbt_project/: dbt_project.yml  packages.yml
fintech_analytics_pkg/fintech_analytics/pipeline/dbt_project/models/marts/payments/: fct_monthly_payment_performance.sql
fintech_analytics_pkg/fintech_analytics/pipeline/dbt_project/models/staging/: stg_customers.sql  stg_merchants.sql  stg_transactions.sql
fintech_analytics_pkg/fintech_analytics/schema/: detector.py  mapping.py
fintech_analytics_pkg/tests/: test_pipeline.py
fintech_dbt/: .user.yml  profiles.yml
fintech_dbt/analyses/: executive_insights.sql
fintech_dbt/macros/: finance_utils.sql
fintech_dbt/models/marts/: schema.yml
fintech_dbt/models/marts/customers/: dim_customers_360.sql  fct_cohort_retention.sql  fct_rfm_segmentation.sql
fintech_dbt/models/marts/risk/: dim_merchant_risk_scorecard.sql  fct_fraud_events.sql
fintech_dbt/models/staging/: sources.yml  stg_disputes.sql  stg_fx_rates.sql
scripts/: export_dashboard.py  generate_data.py
streaming/consumer/: transaction_consumer.py
streaming/producer/: transaction_producer.py
